feat: add `/v2/sbom/{id}/license.zip` endpoint
